syntax = "proto3";

package student;
option go_package = "student_management_service/pb/student";

import "google/protobuf/timestamp.proto";

// Student Service - Manages student data and operations
service StudentService {
  // Get a single student by ID
  rpc GetStudent(GetStudentRequest) returns (StudentResponse);
  
  // Get student by Student ID (RUB ID)
  rpc GetStudentByStudentId(GetStudentByStudentIdRequest) returns (StudentResponse);
  
  // Create a new student
  rpc CreateStudent(CreateStudentRequest) returns (StudentResponse);
  
  // Update existing student
  rpc UpdateStudent(UpdateStudentRequest) returns (StudentResponse);
  
  // Delete a student (soft delete)
  rpc DeleteStudent(DeleteStudentRequest) returns (DeleteResponse);
  
  // List all students with optional filters
  rpc ListStudents(ListStudentsRequest) returns (ListStudentsResponse);
  
  // Search students by name, email, or student ID
  rpc SearchStudents(SearchStudentsRequest) returns (ListStudentsResponse);
  
  // Get students by program ID
  rpc GetStudentsByProgram(GetByProgramRequest) returns (ListStudentsResponse);
  
  // Get students by college ID
  rpc GetStudentsByCollege(GetByCollegeRequest) returns (ListStudentsResponse);
  
  // Check stipend eligibility for a student
  rpc CheckStipendEligibility(StipendEligibilityRequest) returns (StipendEligibilityResponse);
}

// Request Messages
message GetStudentRequest {
  uint32 id = 1;
}

message GetStudentByStudentIdRequest {
  string student_id = 1;
}

message CreateStudentRequest {
  string first_name = 1;
  string last_name = 2;
  string student_id = 3;
  string cid = 4;
  string email = 5;
  string phone_number = 6;
  string date_of_birth = 7;
  string gender = 8;
  uint32 program_id = 9;
  uint32 college_id = 10;
  uint32 user_id = 11;
  string permanent_address = 12;
  string current_address = 13;
  string guardian_name = 14;
  string guardian_phone = 15;
  string admission_date = 16;
  string enrollment_status = 17;
}

message UpdateStudentRequest {
  uint32 id = 1;
  string first_name = 2;
  string last_name = 3;
  string email = 4;
  string phone_number = 5;
  string gender = 6;
  uint32 program_id = 7;
  uint32 college_id = 8;
  string permanent_address = 9;
  string current_address = 10;
  string guardian_name = 11;
  string guardian_phone = 12;
  string enrollment_status = 13;
  double gpa = 14;
  string academic_standing = 15;
}

message DeleteStudentRequest {
  uint32 id = 1;
}

message ListStudentsRequest {
  string status = 1;
}

message SearchStudentsRequest {
  string query = 1;
}

message GetByProgramRequest {
  uint32 program_id = 1;
}

message GetByCollegeRequest {
  uint32 college_id = 1;
}

message StipendEligibilityRequest {
  uint32 student_id = 1;
}

// Response Messages
message StudentResponse {
  uint32 id = 1;
  string first_name = 2;
  string last_name = 3;
  string student_id = 4;
  string cid = 5;
  string email = 6;
  string phone_number = 7;
  string date_of_birth = 8;
  string gender = 9;
  uint32 program_id = 10;
  uint32 college_id = 11;
  uint32 user_id = 12;
  string permanent_address = 13;
  string current_address = 14;
  string guardian_name = 15;
  string guardian_phone = 16;
  string admission_date = 17;
  string enrollment_status = 18;
  double gpa = 19;
  string academic_standing = 20;
  google.protobuf.Timestamp created_at = 21;
  google.protobuf.Timestamp updated_at = 22;
}

message ListStudentsResponse {
  repeated StudentResponse students = 1;
  int32 total = 2;
}

message DeleteResponse {
  bool success = 1;
  string message = 2;
}

message StipendEligibilityResponse {
  bool eligible = 1;
  string reason = 2;
  double amount = 3;
  string stipend_type = 4;
}
